--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -253,9 +253,15 @@ mean_comm_rate = mean(df_cases_day[date>=date_no_hosp]$comm_rate, na.rm=T)
 Case load is an important metric that is correlated also with hospital load. These are split into those that are in ICU, those that are hospitalised and those which test positive but have no symptoms and are in isolation facilities.
  
 ```{r}
-icu_scale=10
+style = "display: inline-block;vertical-align:top;padding-right: 20px"
+bootstrapPage(
+  div(style=style, dateRangeInput("range_date_case", "Date range", 
+                                   start = min_date, end = max_date, 
+                                   min = min_date, max = max_date)))
+icu_scale=5
 renderPlot({
-  ggplot(data=df_cases_day, aes(x=date, y=case_load)) +
+  ggplot(data=df_cases_day[date<=input$range_date_case[2] & date>=input$range_date_case[1]], 
+         aes(x=date, y=case_load)) +
     geom_ribbon(aes(ymin=0, ymax=case_load), fill="#8cd6ff", alpha=.5) + 
     geom_line(color=cbp1[3], size=.5) + 
     geom_point(color=cbp1[3], size=1) + 
@@ -265,7 +271,7 @@ renderPlot({
     geom_ribbon(aes(ymin=0, ymax=I1*icu_scale), fill="#3296cf", alpha=.5) + 
     geom_line(aes(x=date, y=I1*icu_scale), color=cbp1[6], size=.5) +
     geom_point(aes(x=date, y=I1*icu_scale), color=cbp1[6], size=1) + 
-    xlab("") + ylab("Number of active cases (light blue)\n& hospital cases (turquoise)\n") + 
+    xlab("") + ylab("Number of active cases [all] (light blue)\n& hospital cases [ICU + hospitalised] (turquoise)\n") + 
     scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
     scale_y_continuous(sec.axis = sec_axis(~ ./icu_scale, name="Number of active ICU cases (dark blue)\n")) +
     theme +
@@ -279,7 +285,8 @@ renderPlot({
 
 ```{r}
 renderPlot({
-  ggplot(data=df_cases_day, aes(x=date, y=comm_rate)) +
+  ggplot(data=df_cases_day[date<=input$range_date_case[2] & date>=input$range_date_case[1]],
+         aes(x=date, y=comm_rate)) +
     geom_ribbon(aes(ymin=0, ymax=comm_rate), fill="#8cd6ff", alpha=.5) + 
     geom_line(color=cbp1[3], size=.5) + 
     geom_point(color=cbp1[3], size=1) + 
@@ -289,7 +296,7 @@ renderPlot({
     geom_ribbon(aes(ymin=0, ymax=icu_rate*icu_scale), fill="#3296cf", alpha=.5) + 
     geom_line(aes(x=date, y=icu_rate*icu_scale), color=cbp1[6], size=.5) +
     geom_point(aes(x=date, y=icu_rate*icu_scale), color=cbp1[6], size=1) + 
-    xlab("") + ylab("% of active cases in CIF (light blue)\n& hospital cases (turquoise)\n") + 
+    xlab("") + ylab("% of active cases in CIF (light blue)\n& in hospital [ICU + hospitalised] (turquoise)\n") + 
     scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
     scale_y_continuous(sec.axis = sec_axis(~ ./icu_scale, name="% active cases in ICU  (dark blue)\n")) +
     theme +
@@ -330,9 +337,14 @@ show_deceased %>%
 Typically, Case Fatality Rate (CFR) will increase when hospitals get overwhelmed. 
 
 ```{r}
+style = "display: inline-block;vertical-align:top;padding-right: 20px"
+bootstrapPage(
+  div(style=style, dateRangeInput("range_date_cfr", "Date range", 
+                                   start = min_date, end = max_date, 
+                                   min = min_date, max = max_date)))
 death_scale = 1
 renderPlot({
-  ggplot(data=df_cases_day, aes(x=date, y=cfr)) + 
+  ggplot(data=df_cases_day[date<=input$range_date_cfr[2] & date>=input$range_date_cfr[1]], aes(x=date, y=cfr)) + 
     geom_ribbon(aes(ymin=0, ymax=D*death_scale), fill="#ffc394", alpha=.5) + 
     geom_line(aes(y=D*death_scale), color="#e08f4f", size=.5) + 
     geom_point(aes(y=D*death_scale), color="#e08f4f", size=1) + 
