[EJYS] Improve axes

--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -105,7 +105,7 @@ renderPlot({
     geom_bar(position='stack', stat="identity") + 
     geom_bar(aes(x=confirmed.at.date, y=R, fill=cbp1[7]), position='stack', stat="identity") + 
     geom_bar(aes(x=confirmed.at.date, y=D, fill="#525252"), position='stack', stat="identity") + 
-    xlab("") + ylab("Number of new cases detected\n") +
+    xlab("") + ylab("Number of cases\n") +
     scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
     scale_y_continuous(breaks=breaks_f) +
     scale_fill_manual(name="", 
