--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -102,13 +102,14 @@ renderPlot({
 
   data = data[confirmed.at.date >= min_date & confirmed.at.date <= max_date]
 
-  add_date = 4
+  add_date = 20
 
   ggplot(data=data, aes(x=confirmed.at.date, y=N, fill=infection.type, label=no)) +
+  geom_bar(position='stack', stat="identity") + 
 
-  geom_rect(aes(xmin=as.Date("1990-01-01"), xmax=as.Date("2025-01-01"), 
+  geom_rect(aes(xmin=min(data$confirmed.at.date-add_date), xmax=max(data$confirmed.at.date)+add_date, 
                 ymin=0, ymax=Inf), fill="#a8e6ff", show.legend=F, alpha=0.01) +
-  geom_rect(aes(xmin=as.Date("1990-01-01"), xmax=as.Date("2025-01-01"), 
+  geom_rect(aes(xmin=min(data$confirmed.at.date-add_date), xmax=max(data$confirmed.at.date)+add_date, 
                 ymin=-Inf, ymax=0), fill="#dbffbf", show.legend=F, alpha=0.01) +
 
   geom_bar(position='stack', stat="identity") + 
