--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -108,7 +108,7 @@ renderPlot({
   geom_bar(position='stack', stat="identity") + 
 
   geom_rect(aes(xmin=min(data$confirmed.at.date-add_date), xmax=max(data$confirmed.at.date)+add_date, 
-                ymin=0, ymax=Inf), fill="#a8e6ff", show.legend=F, alpha=0.01) +
+                ymin=0, ymax=Inf), fill="#e6f9ff", show.legend=F, alpha=0.01) +
   geom_rect(aes(xmin=min(data$confirmed.at.date-add_date), xmax=max(data$confirmed.at.date)+add_date, 
                 ymin=-Inf, ymax=0), fill="#dbffbf", show.legend=F, alpha=0.01) +
 
