--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -102,13 +102,13 @@ renderPlot({
 
   data = data[confirmed.at.date >= min_date & confirmed.at.date <= max_date]
 
-  add_date = 20
+  add_date = 3
 
   ggplot(data=data, aes(x=confirmed.at.date, y=N, fill=infection.type, label=no)) +
   geom_bar(position='stack', stat="identity") + 
 
   geom_rect(aes(xmin=min(data$confirmed.at.date-add_date), xmax=max(data$confirmed.at.date)+add_date, 
-                ymin=0, ymax=Inf), fill="#d9f7ff", show.legend=F, alpha=0.01) +
+                ymin=0, ymax=Inf), fill="#ebf6ff", show.legend=F, alpha=0.01) +
   geom_rect(aes(xmin=min(data$confirmed.at.date-add_date), xmax=max(data$confirmed.at.date)+add_date, 
                 ymin=-Inf, ymax=0), fill="#dbffbf", show.legend=F, alpha=0.01) +
 
