--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -103,6 +103,7 @@ renderPlot({
   data = data[confirmed.at.date >= min_date & confirmed.at.date <= max_date]
 
   add_date = 3
+  annotation_y = 50
 
   ggplot(data=data, aes(x=confirmed.at.date, y=N, fill=infection.type, label=no)) +
 
@@ -110,9 +111,11 @@ renderPlot({
     annotate(geom="rect", xmin=min(data$confirmed.at.date-add_date),
              xmax=max(data$confirmed.at.date)+add_date, 
              ymin=0, ymax=Inf, fill="skyblue", alpha=0.2) +
+    annotate("text", x = min(data$confirmed.at.date), y=annotation_y, label = "Infected") +
     annotate(geom="rect", xmin=min(data$confirmed.at.date-add_date), 
              xmax=max(data$confirmed.at.date)+add_date, 
              ymin=-Inf, ymax=0, fill="#dbffbf", alpha=0.5) +
+    annotate("text", x = min(data$confirmed.at.date), y=-annotation_y, label = "Recovered") +
 
   geom_bar(position='stack', stat="identity") + 
   geom_bar(aes(x=confirmed.at.date, y=R, fill=cbp1[7]), position='stack', stat="identity") + 
