--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -301,7 +301,7 @@ renderPlot({
     geom_line(aes(x=date, y=I1*icu_scale), color=cbp1[6], size=.5) +
     geom_point(aes(x=date, y=I1*icu_scale), color=cbp1[6], size=1) + 
 
-    geom_vline(xintercept=date_no_hosp, size=1, col=cbp1[2], linetype="dotted") +
+    geom_vline(xintercept=date_no_hosp, size=.5, col=cbp1[2], linetype="dotted") +
 
     xlab("") + ylab("Number of active cases [all] (light blue)\n& hospital cases [ICU + hospitalised] (turquoise)\n") + 
     scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
@@ -332,7 +332,7 @@ renderPlot({
     geom_line(aes(x=date, y=icu_rate*icu_scale), color=cbp1[6], size=.5) +
     geom_point(aes(x=date, y=icu_rate*icu_scale), color=cbp1[6], size=1) + 
     
-    geom_vline(xintercept=date_no_hosp, size=1, col=cbp1[2], linetype="dotted") +
+    geom_vline(xintercept=date_no_hosp, size=.5, col=cbp1[2], linetype="dotted") +
 
     xlab("") + ylab("% of active cases in CIF (light blue)\n& in hospital [ICU + hospitalised] (turquoise)\n") + 
     scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
@@ -457,8 +457,8 @@ renderPlot({
     geom_line(aes(y=percent_load*patient_load_scale), color=cbp1[3], size=.5) + 
     geom_point(aes(y=percent_load*patient_load_scale), color=cbp1[3], size=1) + 
     
-    geom_vline(xintercept=date_no_hosp, size=1, col=cbp1[2], linetype="dotted") +
-    geom_vline(xintercept=date_bvh, size=1, col=cbp1[2], linetype="dotted") +
+    geom_vline(xintercept=date_no_hosp, size=.5, col=cbp1[2], linetype="dotted") +
+    geom_vline(xintercept=date_bvh, size=.5, col=cbp1[2], linetype="dotted") +
     
     xlab("") + ylab("Number of hospitalised persons (dark blue)\n") + 
     scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
@@ -549,7 +549,7 @@ hist_max = max(table(cut(as.numeric(df$days.to.recover.resources),
 ggplot(df, aes(x=days.to.recover.resources)) + 
   geom_histogram(binwidth=binwidth, na.rm=T, color=cbp1[3], fill=cbp1[6], pad=T) + 
   xlab("\nDays to recovery") + ylab("Number of cases\n") +
-  geom_vline(xintercept=mean_recovery_time, size=1, col=cbp1[2], linetype="dotted") +
+  geom_vline(xintercept=mean_recovery_time, size=.5, col=cbp1[2], linetype="dotted") +
   scale_y_continuous(breaks=seq(0, hist_max, ifelse(hist_max<30, 1, 20))) +
   scale_x_continuous(breaks=seq(0, max, ifelse(max<30, 1, 5))) + 
   theme
