--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -574,12 +574,12 @@ renderPlot({
   gs = list(
     ggplot(data, aes(x=cat, y=days)) + 
       geom_jitter(height = 0, width = 0.1, color=cbp1[3]) +
-      geom_boxplot(color=cbp1[6], fill=NA) +
+      geom_boxplot(color=cbp1[6], fill=NA, outlier.size = -1) +
       xlab("Age category") + ylab("Days to recover\n") + theme +
       ggtitle("Age"),
   
     ggplot(df[gender != "unknown"], aes(x=gender, y=days.to.recover.resources)) +
-      geom_boxplot(color=cbp1[6], fill=NA) +
+      geom_boxplot(color=cbp1[6], fill=NA, outlier.size = -1) +
       geom_jitter(height = 0, width = 0.1, color=cbp1[3]) +
       xlab("Gender") + ylab("") + theme +
       ggtitle("Gender")
