--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -153,6 +153,27 @@ renderPlot({
 ```
 
 ```{r}
+
+renderPlot({
+  data = df[,list(N=.N),by=c("confirmed.at.date", "patient.citizen")]
+
+  data$patient.citizen = factor(data$patient.citizen,
+      levels=c("citizen", "pr", "sp", "wp", "lp", "visitor", "unknown"),
+      labels=c("Citizen", "PR", "SP", "WP", "LP", "Visitor", "Unknown"))   
+
+  ggplot(data=data, aes(x=confirmed.at.date, y=N, fill=patient.citizen)) +
+    geom_bar(position='stack', stat="identity") + theme +
+    theme(legend.position="bottom", legend.box = "horizontal", 
+          axis.text.x=element_text(angle = 90)) + 
+    xlab("") + ylab("Number of cases by status\n") +
+    scale_fill_brewer(palette = "YlGnBu") +
+    guides(fill=guide_legend(title="")) + 
+    scale_y_continuous(breaks=breaks_f) +
+    scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") 
+})
+```
+
+```{r}
 show_events = events[grepl("event", type)][,c("no", "date", "short")]
 show_events$no = paste0("[",show_events$no,"]")
 names(show_events) = c("No", "Date", "Event")
