[EJYS] Fix speling

--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -460,7 +460,7 @@ show_deceased_age %>%
 Measuring hospital load is key to ensure that hospitals are not overloaded. 
 
 There are 9 public acute hospitals in Singapore, with an average capacity of 1,200 beds. Prior to covid-19, they were operating at approximately [75% load](https://www.moh.gov.sg/resources-statistics/healthcare-institution-statistics/beds-occupancy-rate-(bor)). The NCID also provides approximately 300 beds. 
-According to [a Straits Times article]((https://www.straitstimes.com/singapore/health/coronavirus-experts-say-big-jump-in-infections-is-stretching-the-healthcare-system)), there are approximately 9,400 public hospital beds. Thus if we assume 25% bed space avalability, there would be `9400*0.25 + 300 =` `r max_load` beds available with the addition of 300 beds from the NCID. Note that this is a very rough estimate and that hospitals could possibly expand in capacity where needed (e.g. in the NCID can be expanded to [>500 beds](https://www.ncid.sg/Facilities-Services/Pages/default.aspx)).
+According to [a Straits Times article]((https://www.straitstimes.com/singapore/health/coronavirus-experts-say-big-jump-in-infections-is-stretching-the-healthcare-system)), there are approximately 9,400 public hospital beds. Thus if we assume 25% bed space availability, there would be `9400*0.25 + 300 =` `r max_load` beds available with the addition of 300 beds from the NCID. Note that this is a very rough estimate and that hospitals could possibly expand in capacity where needed (e.g. in the NCID can be expanded to [>500 beds](https://www.ncid.sg/Facilities-Services/Pages/default.aspx)).
 
 However, private hospital, which have about 1,600 beds according to the [article](https://www.straitstimes.com/singapore/health/coronavirus-experts-say-big-jump-in-infections-is-stretching-the-healthcare-system), were not included in the hospital beds maximum load, as they have not been housing many patients at the moment.
 
