--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -67,6 +67,8 @@ lp_clust = get_clusters()
 
 ## What are the figures
 
+Total number of cases to date: `r dim(df)[1]`
+
 ### New cases
 
 #### New cases through time
@@ -532,25 +534,17 @@ Legend: light orange = community isolation facilities (e.g. D'Resort NTUC in Pas
 Note: cases whose hospitals were pending at time of press release and those who are not admitted are omitted from table above. There were `r no_hospital_data` (of `r dim(df)[1]`) such cases. 
 
 ```{r}
-# df_cases_day_hosp = get_df_cases_day_hosp(df)
-# melted_df_cases_day_hosp = melt(df_cases_day_hosp, id.vars=c("date", "hospital"), 
-#                                 measure.vars=c("I", "R", "D"))
-
-# hosp_cases = df[!(tolower(hospital) %in% c("unknown", "", "not admitted")), 
-#                 list(cases=.N), by=c("confirmed.at.date", "hospital")]
-
-# hosp_scale=10
-
-# renderPlot({
-#   ggplot(melted_df_cases_day_hosp[!(tolower(hospital) %in% c("unknown", "")) & variable=="I"], aes(x=date, y=value)) +
-#     geom_line(show.legend=F, color=cbp1[6], size=1) +
-#     geom_bar(data=hosp_cases, aes(x=confirmed.at.date, y=cases*hosp_scale), 
-#              stat="identity", fill=cbp1[3], color=NA, alpha=0.6) +
-#     facet_wrap(~hospital) +
-#     scale_y_continuous(sec.axis = sec_axis(~ ./hosp_scale, name="Number of new cases in hospitals (bars)\n")) +
-#     ylab("Number of active cases in hospital (line)\n") + xlab("") + 
-#     theme
-# })
+hosp_cases = df[!(tolower(hospital) %in% c("unknown", "", "not admitted")), 
+                list(cases=.N), by=c("confirmed.at.date", "hospital")]
+renderPlot({
+  ggplot(data=hosp_cases, aes(x=confirmed.at.date, y=cases*hosp_scale) +
+    geom_line(show.legend=F, color=cbp1[6], size=1) +
+    geom_bar(stat="identity", fill=cbp1[3], color=NA, alpha=0.6) +
+    facet_wrap(~hospital) +
+    scale_y_continuous(breaks=breaks_f) +
+    ylab("Number of new cases in hospital (line)\n") + xlab("") + 
+    theme
+})
 ```
 
 ### Recovery
